--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web3",
   "version": "0.1.0",
   "private": false,
-  "homepage": "presinutri.github.io/adadas",
+  "homepage": "presinutri.github.io/web3a-431733-farizalbab-react",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
