plis deploy terakhir

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web3",
+  "name": "Adadas-react",
   "version": "0.1.0",
   "private": false,
   "homepage": "https://presinutri.github.io/web3a-431733-farizalbab-react",
